--- a/src/app/views/account/settings/settings.html
+++ b/src/app/views/account/settings/settings.html
@@ -1,4 +1,4 @@
-<div id="settings" class="tab-pane">
+<div id="settings" class="tab-pane col-md-11">
     <h2>Account Settings</h2>
     <div>
         <hr />
@@ -16,75 +16,133 @@
             <tab heading="Shipping">
                 <h5 class="skin-color">Standard Method</h5>
                 <div class="row form-group">
-                    <div class="col-xs-8 col-sm-4 col-md-3">
-                        <input type="text" class="input-text full-width" placeholder="Origin Place"> <!-- dropdown -->
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Origin"> <!-- dropdown -->
                     </div>
-                    <div class="col-xs-8 col-sm-4 col-md-3">
-                        <input type="text" class="input-text full-width" placeholder="Destination Place">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Destination">
                     </div>
-                    <div class="col-xs-8 col-sm-4 col-md-3">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
                         <input type="text" class="input-text full-width" placeholder="Zipcode From">
                     </div>
-                    <div class="col-xs-8 col-sm-4 col-md-3">
-                        <label>to</label>
-                    </div>
-                    <div class="col-xs-8 col-sm-4 col-md-3">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
                         <input type="text" class="input-text full-width" placeholder="Zipcode To">
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Cost</label>
-                        <input type="text" class="input-text full-width">
+                        <input type="text" class="input-text full-width" placeholder="Cost">
                     </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <button class="btn-small uppercase set-top-button">Add More</button>
-                    </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <button class="btn-small uppercase red set-top-button">Remove</button>
+                    <div class="col-xs-12 col-sm-6 col-md-2">
+                        <button class="btn-small uppercase red">Remove</button>
+                        <!--<button class="btn-small uppercase red">Remove</button>-->
                     </div>
                 </div>
                 <hr>
                 <div class="row form-group">
-                    <div class="col-xs-8 col-sm-4 col-md-3">
-                        <label>Source Location</label>
-                        <input type="text" class="input-text full-width">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Origin"> <!-- dropdown -->
                     </div>
-                    <div class="col-xs-8 col-sm-4 col-md-3">
-                        <label>Destination</label>
-                        <input type="text" class="input-text full-width">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Destination">
                     </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Charges</label>
-                        <input type="text" class="input-text full-width">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Zipcode From">
                     </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <button class="btn-small uppercase set-top-button">Add More</button>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Zipcode To">
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <button class="btn-small uppercase red set-top-button">Remove</button>
+                        <input type="text" class="input-text full-width" placeholder="Cost">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-2">
+                        <button class="btn-small uppercase red">Remove</button>
                     </div>
                 </div>
                 <hr>
                 <div class="row form-group">
-                    <div class="col-xs-8 col-sm-4 col-md-3">
-                        <label>Source Location</label>
-                        <input type="text" class="input-text full-width">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Origin"> <!-- dropdown -->
                     </div>
-                    <div class="col-xs-8 col-sm-4 col-md-3">
-                        <label>Destination</label>
-                        <input type="text" class="input-text full-width">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Destination">
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Zipcode From">
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Zipcode To">
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Charges</label>
-                        <input type="text" class="input-text full-width">
+                        <input type="text" class="input-text full-width" placeholder="Cost">
                     </div>
-                    <div class="col-xs-6 col-sm-3 col-md-2">
-                        <button class="btn-small uppercase set-top-button">Add More</button>
+                    <div class="col-xs-12 col-sm-6 col-md-2">
+                        <button class="btn-small uppercase">Add More</button>
                     </div>
-
                 </div>
                 <hr>
             </tab>
-            <tab heading="Additional Charges">addidional charges</tab>
+            <tab heading="Additional Charges">
+                <h5 class="skin-color">Additional Charges</h5>
+                <div class="row form-group">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Charge Name</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Value</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Unit</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Item Kind</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <label>Category</label>
+                    </div>
+                </div>
+                <div class="row form-group light-fonts">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Charge Name</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Value</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Unit</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Item Kind</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <label>Category</label>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Charge Name"> <!-- dropdown -->
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Value">
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Flat/%tage">
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="Item Kind">
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <input type="text" class="input-text full-width" placeholder="category">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-2">
+                        <button class="btn-small uppercase red">View</button>
+                        <!--<button class="btn-small uppercase red">Remove</button>-->
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-2">
+                        <button class="btn-small uppercase red">View</button>
+                        <!--<button class="btn-small uppercase red">Remove</button>-->
+                    </div>
+                </div>
+                <hr>
+            </tab>
         </tabset>
 
     </div>
