--- a/src/app/views/account/settings/settings.html
+++ b/src/app/views/account/settings/settings.html
@@ -1,6 +1,6 @@
-<div id="settings" class="tab-pane col-md-11">
+<div id="settings" class="tab-pane col-md-12 col-sm-12">
     <h2>Account Settings</h2>
-    <div>
+    <div class="settings">
         <hr />
         <tabset>
             <tab heading="General Settings">
@@ -115,7 +115,51 @@
                     <div class="col-xs-6 col-sm-3 col-md-2">
                         <label>Category</label>
                     </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="btn-small uppercase red">Delete</button>
+                    </div>
                 </div>
+                <div class="row form-group light-fonts">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Charge Name</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Value</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Unit</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Item Kind</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <label>Category</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="btn-small uppercase red">Delete</button>
+                    </div>
+                </div>
+                <div class="row form-group light-fonts">
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Charge Name</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Value</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Unit</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 col-md-2">
+                        <label>Item Kind</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <label>Category</label>
+                    </div>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="btn-small uppercase red">Delete</button>
+                    </div>
+                </div>
+
                 <div class="row form-group">
                     <div class="col-xs-6 col-sm-2 col-md-2">
                         <input type="text" class="input-text full-width" placeholder="Charge Name"> <!-- dropdown -->
@@ -132,14 +176,11 @@
                     <div class="col-xs-6 col-sm-3 col-md-2">
                         <input type="text" class="input-text full-width" placeholder="category">
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-2">
-                        <button class="btn-small uppercase red">View</button>
+                    <div class="col-xs-6 col-sm-3 col-md-1">
+                        <button class="btn-small uppercase">Add</button>
                         <!--<button class="btn-small uppercase red">Remove</button>-->
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-2">
-                        <button class="btn-small uppercase red">View</button>
-                        <!--<button class="btn-small uppercase red">Remove</button>-->
-                    </div>
+
                 </div>
                 <hr>
             </tab>
