payment integration WIP..

--- a/src/app/views/payment/payment.html
+++ b/src/app/views/payment/payment.html
@@ -1,6 +1,6 @@
 <h1>Braintree Payment Form</h1>
 <div>
-    <form  method="POST" id="braintree-payment-form">
+    <form id="braintree-payment-form">
         <p><label>Card Number</label>
             <input type="text" size="20" autocomplete="off" data-encrypted-name="number" />
         </p>
