--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -72,7 +72,7 @@
         </a>
     </div>
 </div>
-<div class="notification-area">
+<!--<div class="notification-area">
     <div class="info-box block">
         <span class="close"></span>
         <p>This is your Dashboard, the place to check your Profile, respond to Reservation Requests, view upcoming Reservations, and much more.</p>
@@ -82,7 +82,7 @@
             <li><span class="skin-color">Get Help</span> — View our help section and FAQs to get started on Marketplace. </li>
         </ul>
     </div>
-</div>
+</div>-->
 
 <div class="row block">
     <div class="col-md-6 notifications">
@@ -199,49 +199,4 @@
     </div>
 </div>
 <hr>
-<div class="row">
-    <div class="col-md-4">
-        <h4>Benefits of Marketplace Account</h4>
-        <ul class="benefits triangle hover">
-            <li><a>Faster bookings with lesser clicks</a></li>
-            <li><a>Track Equipment history &amp; manage Reservations</a></li>
-            <li><a>Manage profile &amp; personalize experience</a></li>
-            <li><a>Receive alerts &amp; equipment recommendations</a></li>
-        </ul>
-    </div>
-    <div class="col-md-4 previous-bookings image-box style14">
-        <h4>Your Previous Bookings</h4>
-        <article class="box">
-            <figure class="no-padding">
-                <a title=""  >
-                    <img alt="" src="http://placehold.it/63x59" width="63" height="59">
-                </a>
-            </figure>
-            <div class="details">
-                <h5 class="box-title"><a  >Caterpillar Equipment</a><small class="fourty-space"><span class="price">$350</span></small></h5>
-            </div>
-        </article>
-        <article class="box">
-            <figure class="no-padding">
-                <a title=""  >
-                    <img alt="" src="http://placehold.it/63x59" width="63" height="59">
-                </a>
-            </figure>
-            <div class="details">
-                <h5 class="box-title"><a  >Caterpillar Equipment</a><small class="fourty-space"><span class="price">$260</span></small></h5>
-            </div>
-        </article>
-    </div>
-    <div class="col-md-4">
-        <h4>Need Marketplace Help?</h4>
-        <div class="contact-box">
-            <p>We would be more than happy to help you. Our team advisor are 24/7 at your service to help you.</p>
-            <address class="contact-details">
-                <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-MKTPLACE</span>
-                <br>
-                <a class="contact-email"  >help@marketplace.com</a>
-            </address>
-        </div>
-    </div>
-</div>
 </div>
