--- a/src/app/views/account/inventory/list/list.html
+++ b/src/app/views/account/inventory/list/list.html
@@ -17,21 +17,21 @@
 
 <div class="booking-history">
     <div class="booking-info clearfix" ng-repeat="inv in mdl.inventories">
-        <h4 class="box-title col-md-2">
+        <h4 class="box-title col-md-4">
             <i class="icon soap-icon-card yellow-color circle"></i>{{inv.product.name}}
             <small>ID : {{inv.id}}</small>
         </h4>
-        <h4 class="box-title col-md-2 col-lg-offset-1">
+        <h4 class="box-title col-md-2">
             <i class="icon yellow-color circle"></i>{{inv.serial_no || "XXX-XXX-XXX"}}
         </h4>
-        <h4 class="box-title col-md-1 col-lg-offset-1">
+        <h4 class="box-title col-md-1">
             <i class="icon yellow-color circle"></i>{{inv.source}}
         </h4>
         <h4 class="box-title col-md-2 col-lg-offset-1">
             <i class="icon yellow-color circle"></i>{{inv.is_active? 'Available' : 'Not Available'}}
         </h4>
 
-        <button class="btn-mini status">Archive</button>
+        <toggle-switch ng-model="switchStatus" on-label="sí" off-label="no"></toggle-switch>
         <button class="btn-mini status" ui-sref="main.account.inventory.edit({id:inv.id})">Edit</button>
     </div>
 
