--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5079,4 +5079,19 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
     width: 100% !important;
   }
 }
+.toggle-switch .knob {
+  width: 6% !important;
+}
+.toggle-switch {
+  span {
+    width: 40%;
+  }
+  > div {
+    width: 187%;
+  }
+  .switch-left, .switch-right {
+    font-size: 12px;
+  }
+}
+
 /* custom style ends*/
