--- a/src/app/views/account/inventory/list/list.html
+++ b/src/app/views/account/inventory/list/list.html
@@ -28,10 +28,10 @@
             <i class="icon yellow-color circle"></i>{{inv.source}}
         </h4>
         <h4 class="box-title col-md-2 col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>{{inv.is_active? 'Available' : 'Not Available'}}
+            <!--<i class="icon yellow-color circle"></i>{{inv.is_active? 'Available' : 'Not Available'}}-->
+            <toggle-switch ng-model="switchStatus" on-label="Available" off-label="Not-Available"></toggle-switch>
         </h4>
 
-        <toggle-switch ng-model="switchStatus" on-label="sí" off-label="no"></toggle-switch>
         <button class="btn-mini status" ui-sref="main.account.inventory.edit({id:inv.id})">Edit</button>
     </div>
 
