Equipment List issue fixed

--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5092,6 +5092,9 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
   .switch-left, .switch-right {
     font-size: 12px;
   }
+  .switch-left {
+    background-color: #E37F1F;
+  }
 }
 
 /* custom style ends*/
