--- a/src/app/views/account/equipments/list/list.html
+++ b/src/app/views/account/equipments/list/list.html
@@ -1,5 +1,5 @@
 
-<h2>Equipments You have Rented! <button class="btn-mini status pull-right add-button" ui-sref="main.account.equipments.add">Add New Equipment</button></h2>
+<h2>My Equipments<button class="btn-mini status pull-right add-button" ui-sref="main.account.equipments.add">Add New Equipment</button></h2>
 <div class="filter-section gray-area clearfix">
     <form>
         <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='all'}" ng-click="listEquiMdl.updateFilter('all')">
