--- a/src/app/views/account/invoices/view/view.html
+++ b/src/app/views/account/invoices/view/view.html
@@ -1,21 +1,37 @@
-<div class="booking-information travelo-box" style="margin-bottom: 0px;">
+<div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
 
     <h2>Invoice Details</h2>
+    <p class="bg-danger">This invoice is not paid. Please pay to get order processed.</p>
     <dl class="term-description">
         <dt>Order number:</dt><dd>{{mdl.invoice.order.id}}</dd>
         <dt>First name:</dt><dd>{{mdl.invoice.order.billing_address.first_name}}</dd>
         <dt>Last name:</dt><dd>{{mdl.invoice.order.billing_address.last_name}}</dd>
         <dt>Phone:</dt><dd>{{mdl.invoice.order.billing_address.phone}}</dd>
-        <dt>Street Address and number:</dt><dd>{{mdl.invoice.order.billing_address.address1+' '+order.billing_address.address2}}</dd>
-        <dt>Town / City:</dt><dd>{{mdl.invoice.order.billing_address.city.name}}</dd>
-        <dt>ZIP code:</dt><dd>{{mdl.invoice.order.billing_address.zip_code}}</dd>
-        <dt>Country:</dt><dd>{{mdl.invoice.order.billing_address.country.name}}</dd>
     </dl>
-
     <hr />
+    <div class="row invoice-address">
+        <div class="col-md-4">
+            <h2>Shipping Address</h2>
+            <dl class="term-description">
+                <dd>{{mdl.invoice.order.billing_address.first_name}} {{mdl.invoice.order.billing_address.last_name}}</dd>
+                <dd>{{mdl.invoice.order.billing_address.address1+' '+order.billing_address.address2}}</dd>
+                <dd>{{mdl.invoice.order.billing_address.city.name}}-{{mdl.invoice.order.billing_address.zip_code}}</dd>
+                <dd>{{mdl.invoice.order.billing_address.country.name}}</dd>
+            </dl>
+        </div>
+        <div class="col-md-4">
+            <h2>Billing Address</h2>
+            <dl class="term-description">
+                <dd>{{mdl.invoice.order.billing_address.first_name}} {{mdl.invoice.order.billing_address.last_name}}</dd>
+                <dd>{{mdl.invoice.order.billing_address.address1+' '+order.billing_address.address2}}</dd>
+                <dd>{{mdl.invoice.order.billing_address.city.name}}-{{mdl.invoice.order.billing_address.zip_code}}</dd>
+                <dd>{{mdl.invoice.order.billing_address.country.name}}</dd>
+            </dl>
+        </div>
+    </div>
 
 </div>
-<div id="tour-details" class="travelo-box order-details" load-indicator>
+<div id="tour-details" class="travelo-box order-details" style="padding-top: 0px;" load-indicator>
     <div ng-repeat="item in mdl.invoice.items" class="intro2 small-box border-box table-wrapper hidden-table-sms">
         <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
         <div class="description">
