--- a/src/app/views/login/login.html
+++ b/src/app/views/login/login.html
@@ -13,8 +13,8 @@
         </div>
         <div class="form-group">
             <a ng-click="loginMdl.forgotPassword()" class="forgot-password pull-right pointerhover">Forgot password?</a>
-            <div class="checkbox checkbox-inline">
-                <label>
+            <div ng-click="loginMdl.rememberMe=!loginMdl.rememberMe" ng-class="{checked:loginMdl.rememberMe}" class="checkbox checkbox-inline">
+                <label >
                     <input type="checkbox">Remember Me
                 </label>
             </div>
