--- a/src/app/views/account/invoices/view/view.html
+++ b/src/app/views/account/invoices/view/view.html
@@ -39,8 +39,9 @@
         </div>
         <div class="table-cell">
             <dl class="term-description">
-                <dt>Rented For</dt><dd>{{item.cost_breakup.subtotal.rent_unit_days}} days</dd>
-                <dt>Order Type</dt><dd>{{item.shipping_kind}}</dd>
+                <dt>Rented For</dt><dd>12 days</dd>
+                <dt>Order Type</dt><dd>Postpaid</dd>
+                <dt>Quantity</dt><dd>3</dd>
             </dl>
         </div>
         <div class="price-section table-cell">
